Fixes button alignment

--- a/css/index.css
+++ b/css/index.css
@@ -329,17 +329,17 @@ header nav a:last-of-type {
   display: block;
   background-color: darkcyan;
   color: white;
-  margin: 0 10px 20px;
+  margin: 0 0 20px;
   width: 200px;
   height: 45px;
   font-size: 1.8rem;
   border-radius: 15px;
   text-align: center;
   padding: 15px 0;
-  margin: auto;
 }
 @media (max-width: 500px) {
   .btn {
     width: 100%;
+    margin: auto;
   }
 }
