--- a/less/mixins.less
+++ b/less/mixins.less
@@ -3,7 +3,7 @@
     display: block;
     background-color: @bg-color;
     color: @fnt-color;
-    margin: 0 10px 20px;
+    margin: 0 0 20px;
     width: 200px;
     height: 45px;
     font-size: @size;
